--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -8,8 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".ProductsActivity">
 
-    <TextView
-        android:id="@+id/text_view_product"
+    <ListView
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/activity_margin"/>
