Prevent crash with blank editor and modification price type

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -39,7 +39,7 @@
             <EditText
                 android:id="@+id/edit_product_price"
                 android:hint="@string/hint_product_price"
-                android:inputType="textCapWords"
+                android:inputType="number"
                 style="@style/EditorFieldStyle" />
 
             <!-- Quantity field -->
