Fix focusable button on product activity

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -36,7 +36,8 @@
             android:id="@+id/btn_decrease_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="-"/>
+            android:hint="-"
+            android:focusable="false"/>
 
     </LinearLayout>
 
