--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -43,11 +43,23 @@
                 style="@style/EditorFieldStyle" />
 
             <!-- Quantity field -->
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="-"
+                android:onClick="decreaseQuantity"/>
             <EditText
                 android:id="@+id/edit_product_quantity"
                 android:hint="@string/hint_product_quantity"
                 android:inputType="number"
                 style="@style/EditorFieldStyle" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="+"
+                android:onClick="increaseQuantity"/>
+
+
 
             <!-- Supplier field -->
             <EditText
